--- a/blurrypixel.html
+++ b/blurrypixel.html
@@ -6,36 +6,46 @@ layout: default
     <h3 class="island">The Blurry Pixel</h3>
     <div class="pieces grid">
 
-      <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sign.jpg" alt="Store sign">
+      <div class="unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/blurry/sign.jpg" alt="Blurry Pixel sign">
       </div>
 
-      <div class="unit s-1 m-1 l-1-2 island">
-        <p class="milli">During my time in the graphic design program I got to do a mockup rebranding for a small company. The Blurry Pixel is a small gaming bar in downtown Ottawa where people can get drinks and play video games, well into the night. The owner came up with the name <i>The Blurry Pixel</i> because when you stare at a screen for a long time, things start to blur and look pixelated. The colours green and black were chosen because those were the colours of monochrome monitors which were very common in the early days of computing.</p>
+      <div class="unit s-1 m-1 l-1-4 island">
+        <h4 class="milli">Deliverables</h4>
+        <p class="">Logo,<br>Branding </p>
+        <h4 class="milli pad-t-2">Challenge</h4>
+        <p class="">Redesign a logo that was originally designed by the bar owner and holds a lot of emotional value. Keep the original colours maintain a strong gaming look.</p>
+      </div>
+
+      <div class="unit s-1 m-1 l-1-4 island">
+        <h4 class="milli">Outcome</h4>
+        <p class="">A stronger and more recognizable brand – logo was redesigned to look more visually appealing while still keeping the pixels that were a requirement by the client. </p>
+      </div>
+
+      <div class="card unit s-1 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/blurry/logo-strip.jpg" alt="Blurry Pixel variations">
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sketch.jpg" alt="Logo sketches">
       </div>
 
-      <div class="unit s-1 m-1 l-1-2 island">
-        <p class="milli">The company used a wordmark to advertise the location. The name of the establishment is typed in a green pixel font that is easily recognizable but not very visually appealing. To redesign the brand I began coming up with logos sketches for the company. During the sketching process I tried to keep gaming aspects in the art, since the bar's main feature is its video games. Furthermore, when using gaming icons, I wanted to use something that would be easily recognizable to people who do not play video games.</p>
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <p class="">During my time in the graphic design program I got to do a mockup rebranding for a small company. The Blurry Pixel is a small gaming bar in downtown Ottawa where people can get drinks and play video games, well into the night. The owner came up with the name <i>The Blurry Pixel</i> because when you stare at a screen for a long time, things start to blur and look pixelated. The colours green and black were chosen because those were the colours of monochrome monitors which were very common in the early days of computing. The company used a wordmark to advertise the location. The name of the establishment is typed in a green pixel font that is easily recognizable but not very visually appealing. </p>
+        <p>To redesign the brand I began coming up with logos sketches for the company. During the sketching process I tried to keep gaming aspects in the art, since the bar's main feature is its video games. Furthermore, when using gaming icons, I wanted to use something that would be easily recognizable to people who do not play video games.</p>
       </div>
 
-      <div class="card unit s-1 m-1-2 l-1-2 island">
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <p class="">Once I decided on two logos, I played around with the original company’s colours, since the owner wanted those to stay. The colours were applied in many different ways to find the most appealing look. Since every logo should have a coloured version and a black and white version I then tried different ways to apply the black and white, to make it stand out. Once a final logo was chosen in colour and in black and white, I was able to create a branding guide for the company. </p>
+        <p>The branding guide shows how the logos, wordmarks, colours and photography should be used. The logo is now more dynamic and modern but still keeps the gaming feel without having pixel text. The logo can be animated with blurry effects and pixes to keep the original feel when it is displayed on the TVs in the establishment. The logo is now more dynamic and modern but still keeps the gaming feel without having pixel text. </p>
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/logos.jpg" alt="Logo Ideas">
       </div>
 
-      <div class="unit s-1 m-1-2 l-1-2 island">
-        <p class="milli">Once I decided on two logos, I played around with the original company’s colours, since the owner wanted those to stay. The colours were applied in many different ways to find the most appealing look. Since every logo should have a coloured version and a black and white version I then tried different ways to apply the black and white, to make it stand out. Once a final logo was chosen in colour and in black and white, I was able to create a branding guide for the company. The branding guide shows how the logos, wordmarks, colours and photography should be used. The logo is now more dynamic and modern but still keeps the gaming feel without having pixel text. The logo can be animated with blurry effects and pixes to keep the original feel when it is displayed on the TVs in the establishment. The logo is now more dynamic and modern but still keeps the gaming feel without having pixel text. </p>
-      </div>
-
-      <div class="card unit s-1 m-1-2 l-3-4 island">
+      <div class="card unit s-1 island">
         <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/final.jpg" alt="Final Logo">
-      </div>
-
-      <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">The logo can be animated with blurry effects and pixes to keep the original feel when it is displayed on the TVs in the establishment. The establishment used to just reuse printed menus for customers to use. This allowed the menus to get stained and also had no design to it. I created a simple double sided menu that uses green on black text on one side which represents the monochrome monitors that inspired the colours for the logo. With their small menu the items can be layed out more effectively when using both sides.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-2 island">
@@ -45,6 +55,10 @@ layout: default
       <div class="card unit s-1 m-1-2 l-1-2 island">
         <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/drink.jpg" alt="Beer glass">
       </div>
+
+      <!-- <div class="unit s-1 m-1-2 l-1-4 island">
+        <p class="milli">The logo can be animated with blurry effects and pixes to keep the original feel when it is displayed on the TVs in the establishment. The establishment used to just reuse printed menus for customers to use. This allowed the menus to get stained and also had no design to it. I created a simple double sided menu that uses green on black text on one side which represents the monochrome monitors that inspired the colours for the logo. With their small menu the items can be layed out more effectively when using both sides.</p>
+      </div> -->
 
       <div class="embed embed-16by9">
         <iframe class="embed-item" src="https://player.vimeo.com/video/254134218?loop=1&title=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
