--- a/drbia.html
+++ b/drbia.html
@@ -6,32 +6,33 @@ layout: default
     <h3 class="island">Downtown Rideau BIA</h3>
     <div class="pieces grid">
 
-      <div class="card unit s-1 m-1-2 island">
+      <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/drbia/ads.jpg" alt="The Fourth at the NAC poster">
       </div>
 
-      <div class="unit s-1 m-1-2 island">
-        <p class="milli">Located a block or two east of Parliament Hill in Ottawa is the downtown Rideau area. It is an area filled with trendy stores, a mall, theatres, cafes, historic monuments, buildings, and more. The Downtown Rideau BIA's job is to promote the area and show people what this arts and fashion district has to offer. While working at the BIA, I got the fantastic opportunity to do lots of branding and advertising. <br> I got to create many signs for the Nation Arts Centre along with the Ottawa Art Gallery that hung on street flags and other outdoor displays. Since the DRBIA has an app and website, I also managed those and updated them with social media posts and information about all the Rideau attractions and events going on.
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <p class="">Located a block or two east of Parliament Hill in Ottawa is the downtown Rideau area. It is an area filled with trendy stores, a mall, theatres, cafes, historic monuments, buildings, and more. The Downtown Rideau BIA's job is to promote the area and show people what this arts and fashion district has to offer. While working at the BIA, I got the fantastic opportunity to do lots of branding and advertising.</p>
+        <p>I got to create many signs for the Nation Arts Centre along with the Ottawa Art Gallery that hung on street flags and other outdoor displays. Since the DRBIA has an app and website, I also managed those and updated them with social media posts and information about all the Rideau attractions and events going on.</p>
       </div>
 
       <div class="card unit s-1 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/drbia/Brochure-long-2.png" alt="DRBIA map">
       </div>
 
-      <div class="card unit s-1 m-1-2 island">
+      <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/drbia/the-fourth.jpg" alt="DRBIA Instagram ads">
       </div>
 
-      <div class="unit s-1 m-1-2 island">
-        <p class="milli">During my time at the BIA, I also got to create a brochure that is handed out at events and found at hotels downtown showing tourists and locals where historical monuments and locations are in the downtown Rideau area. I spent many days walking around the area, taking pictures of the monuments and making a not of where they are located. Along with that, I was learning about their history to include in the brochure as well as posting about it the website.
-        <br> One of the biggest attractions in the downtown Rideau area is the National Arts Centre. Every Friday they have an event called "Fridays and the Fourth" which I did lots of advertising for. These advertisements would display on electronic street signs and get changed every week at advertising new artists that are performing.</p>
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <p class="">During my time at the BIA, I also got to create a brochure that is handed out at events and found at hotels downtown showing tourists and locals where historical monuments and locations are in the downtown Rideau area. I spent many days walking around the area, taking pictures of the monuments and making a not of where they are located. Along with that, I was learning about their history to include in the brochure as well as posting about it the website.</p>
+        <p> One of the biggest attractions in the downtown Rideau area is the National Arts Centre. Every Friday they have an event called "Fridays and the Fourth" which I did lots of advertising for. These advertisements would display on electronic street signs and get changed every week at advertising new artists that are performing.</p>
       </div>
 
-      <div class="card unit s-1 m-1-2 island">
+      <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/drbia/job-ads.png" alt="Phone Case">
       </div>
 
-      <div class="card unit s-1 m-1-2 island">
+      <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/drbia/sign.jpg" alt="Job ads">
       </div>
 
