--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 
     <div class="unit island bannertext s-2-3">
       <h1 class="">Hey There!</h1>
-      <p>My name is Jaimie and I am a graphic designer/developer located in Ottawa, Ontario. I specialize in <strong>branding</strong>, <strong>illustration</strong> and <strong>motion</strong>.</p>
+      <p class="milli">My name is Jaimie and I am a graphic designer/developer located in Ottawa, Ontario. I specialize in <strong>branding</strong>, <strong>illustration</strong> and <strong>motion</strong>.</p>
     </div>
   </div>
 </div>
@@ -21,9 +21,9 @@ layout: default
 <div class="banner-small">
   <div class="text2">
     <div>
-      <h2 class="">Hey There!</h2>
+      <h3 class="yotta">Hey There!</h3>
     </div>
-    <p>My name is Jaimie and I am a graphic designer/developer located in Ottawa, Ontario. I specialize in <strong>branding</strong>, <strong>illustration</strong> and <strong>motion</strong>.</p>
+    <p>My name is Jaimie and I am a graphic designer/developer located in Ottawa, Ontario.<br> I specialize in <strong>branding</strong>, <strong>illustration</strong> and <strong>motion</strong>.</p>
   </div>
 </div>
 
@@ -159,7 +159,7 @@ layout: default
 
 
 <section id="contact" class="grid contact-me text-center">
-  <h2 class="unit xs-1 pad-t-2">CONTACT ME</h2>
+  <h1 class="unit yotta xs-1 pad-t-2">CONTACT ME</h1>
   <!--FORM-->
   <form class="unit xs-1" action="https://formspree.io/hey@jaimieporter.ca" method="POST">
     <div class="push">
