--- a/iscream.html
+++ b/iscream.html
@@ -6,27 +6,35 @@ layout: default
     <h3 class="island">I Scream</h3>
     <div class="pieces grid">
 
-      <div class="card unit m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/i-scream-screans.jpg" alt="Phone Screens">
+      <div class="unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/i-scream-screans.jpg" alt="Phone screens">
       </div>
 
-      <div class="unit m-1 l-1-2 island">
-        <p class="mulit milli">I Scream, is an application that helps users find local establishments that serve ice cream. It allows ice cream lovers to easily find ice cream in the area that serves their needs. </p>
-        <p class="milli">Since ice cream is one of my favourite things to eat, I began wondering if I could turn my love of ice cream into a new application that could help myself and others find it more easily. Because I'm lactose intolerant it is hard for me to find ice cream that is lactose free, this app could also help find stores that serve lactose free products. I always try to get the best deals on everything however I find it hard to find ice cream shops that sell quality ice cream at a reasonable price. With this in mind, I started to piece together information to come up with a problem statement that could drive my creation of the app.</p>
+      <div class="unit s-1 m-1 l-1-4 island">
+        <h4 class="milli">Deliverables</h4>
+        <p class="">Application, <br>Logo </p>
+        <h4 class="milli pad-t-2">Challenge</h4>
+        <p class="">Create a new innovative application. Design a flow that is simple and easy to follow.</p>
       </div>
 
-      <div class="card unit s-1 m-1-2 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/sketch1.jpg" alt="Sketches">
+      <div class="unit s-1 m-1 l-1-4 island">
+        <h4 class="milli">Outcome</h4>
+        <p class="">An easy to use application for a specific target audience. Creative idea that allows ice cream lovers to explore and find new flavours and styles to try.</p>
       </div>
 
-      <div class="card unit s-1 m-1-2 l-1-2 island">
+      <div class="unit multi m-1 l-1-2 island">
+        <p class="">I Scream, is an application that helps users find local establishments that serve ice cream. It allows ice cream lovers to easily find ice cream in the area that serves their needs. </p>
+        <p>Since ice cream is one of my favourite things to eat, I began wondering if I could turn my love of ice cream into a new application that could help myself and others find it more easily. Because I'm lactose intolerant it is hard for me to find ice cream that is lactose free, this app could also help find stores that serve lactose free products. I always try to get the best deals on everything however I find it hard to find ice cream shops that sell quality ice cream at a reasonable price. With this in mind, I started to piece together information to come up with a problem statement that could drive my creation of the app.</p>
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/flow.png" alt="Flow chart">
       </div>
 
     <div class="grid lists">
       <div class="unit s-1 m-1-2 l-1-4 island">
         <h6>What users say</h6>
-        <ul class="list milli">
+        <ul class="list ">
           <li>What kind of ice-cream do they have</li>
           <li>I wonder what places have red velvet ice-cream</li>
           <li>Is this fat free ice-cream</li>
@@ -36,7 +44,7 @@ layout: default
 
       <div class="unit s-1 m-1-2 l-1-4 island">
         <h6>What users think</h6>
-        <ul class="list milli">
+        <ul class="list ">
           <li>This ice-cream flavours look good</li>
           <li>They make the cream cone look like art</li>
           <li>This store is Instagram worth</li>
@@ -45,7 +53,7 @@ layout: default
 
       <div class="unit s-1 m-1-2 l-1-4 island">
         <h6>What users feel</h6>
-        <ul class="list milli">
+        <ul class="list ">
           <li>Happy, excited, joyful</li>
           <li>Bloated, fat, full, hungry</li>
           <li>Brain freeze, hot and needing to cool off</li>
@@ -54,7 +62,7 @@ layout: default
 
       <div class="unit s-1 m-1-2 l-1-4 island">
         <h6>What users do</h6>
-        <ul class="list milli">
+        <ul class="list ">
           <li>Search for locations</li>
           <li>Look at menu, prices</li>
           <li>Look at icecream types, toppings, cones</li>
@@ -62,19 +70,19 @@ layout: default
       </div>
     </div>
 
-      <div class="card unit s-1 m-1-2 l-3-4 island">
+      <div class="card unit s-1 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/sketch2.jpg" alt="Mock up sketches">
       </div>
 
-      <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">When evaluating what users feel during their ice cream shop experience, I came up with the problem statement, <strong>Ice cream lovers need a way to easily view what is offered at ice-cream shops because they want to know their options.</strong> With this knowledge I came up with three different flows that my app should include to support my users needs. To get the best understanding for the app I created sketches of the screens to see how the flow would work. Once that was planned out I was able to test it out with interactive screens and then final create an animation to display the app and give viewers a visual experience.</p>
+      <div class="unit s-1 island">
+        <p class="columns">When evaluating what users feel during their ice cream shop experience, I came up with the problem statement, <strong>Ice cream lovers need a way to easily view what is offered at ice-cream shops because they want to know their options.</strong> With this knowledge I came up with three different flows that my app should include to support my users needs. To get the best understanding for the app I created sketches of the screens to see how the flow would work. Once that was planned out I was able to test it out with interactive screens and then final create an animation to display the app and give viewers a visual experience.</p>
       </div>
 
-      <div class="card unit s-1 m-1-2 l-1-2 island">
+      <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/screen.jpg" alt="Iphone X mock up">
       </div>
 
-      <div class="card unit s-1 m-1-2 l-1-2 island">
+      <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/cups.jpg" alt="Icecream cups">
       </div>
 
