--- a/solink.html
+++ b/solink.html
@@ -3,26 +3,41 @@ layout: default
 ---
 
   <section class="workbody">
-    <h3 class="island">Solink</h3>
+    <h2 class="">Solink</h2>
     <div class="pieces grid">
 
-      <div class="card unit s-1 m-1-2 l-1-2 island">
+      <div class="unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/wall.jpg" alt="Solink logo on wall">
       </div>
 
+      <div class="unit s-1 m-1 l-1-4 island">
+        <h4 class="milli">Deliverables</h4>
+        <p class="">Branding, <br>Logo <br>Marketing </p>
+        <h4 class="milli pad-t-2">Challenge</h4>
+        <p class="">Redesign the company logo to look more reflect the growth of the business and the brand while keeping it a bold and strong. Create a logo that fits better with customer logos and partners visually.</p>
+      </div>
 
-      <div class="unit s-1 m-1-2 l-1-2 island">
-        <p class="milli">Solink is a video security company that helps their clients find theft and improve operations in their businesses by giving them total visibility. As a tech company the original logo used a typical blue colour that can be associated with many tech logos (ie microsoft, facebook, twitter, word, etc.) Moving forward I wanted to stay within the blue family for the final product but changed it from the typical technology blue to stand out from other tech company logos. Since the original logo was long but short it made it awkward to put it on documents with other partner and client logos. The additional <i>S</i> icon that was added to the left side of the logo added unnecessary length while the font choice made SOLINK look very compressed.</p>
+      <div class="unit s-1 m-1 l-1-4 island">
+        <h4 class="milli">Outcome</h4>
+        <p class="">A stronger and more recognizable brand – logo, messaging, collateral such as business cards and tradeshow handouts, and a social media presence. Gave the product a new set of colours to build a stronger look and feel that ensured to its users that it is a reliable and trusted platform.</p>
+      </div>
+
+      <div class="card unit s-1 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/solink-os.jpg" alt="Solink logo on wall">
+      </div>
+
+      <div class="unit s-1 m-1 l-1 island">
+        <p class="columns">Solink is a video security company that helps their clients find theft and improve operations in their businesses by giving them total visibility. As a tech company the original logo used a typical blue colour that can be associated with many tech logos (ie microsoft, facebook, twitter, word, etc.) Moving forward I wanted to stay within the blue family for the final product but changed it from the typical technology blue to stand out from other tech company logos. Since the original logo was long but short it made it awkward to put it on documents with other partner and client logos. The additional <i>S</i> icon that was added to the left side of the logo added unnecessary length while the font choice made SOLINK look very compressed.</p>
       </div>
 
       <div class="grid lists">
-        <div class="card unit s-1 m-1-3 l-1-3 island">
+        <div class="card unit s-1 m-1 l-1-3 island">
           <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/oldnew.png" alt="Old logo and new one">
         </div>
 
-        <div class="unit s-1 m-1-3 l-1-3 island">
-          <h6>Original Logo Pro's</h6>
-          <ul class="list milli">
+        <div class="unit s-1 m-1 l-1-3 island">
+          <h6 class="">Original Logo Pro's</h6>
+          <ul class="list ">
             <li>Long-time presence</li>
             <li>Nostalgia and connection for long-term staff</li>
             <li>Simplicity</li>
@@ -30,9 +45,9 @@ layout: default
           </ul>
         </div>
 
-        <div class="unit s-1 m-1-3 l-1-3 island">
-          <h6>Original Logo Con's</h6>
-          <ul class="list milli">
+        <div class="unit s-1 m-1 l-1-3 island">
+          <h6 class="">Original Logo Con's</h6>
+          <ul class="list ">
             <li>Strong security vibe is now less relevant</li>
             <li>Logo is not designed for ease of use</li>
             <li>S and wordmark font are becoming outdated</li>
@@ -45,13 +60,14 @@ layout: default
         </div>
       </div>
 
-      <div class="card unit s-1 m-1-2 l-1-2 island">
+      <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/sketches.jpg" alt="Logo Sketches">
       </div>
 
-      <div class="unit s-1 m-1-2 l-1-2 island">
-        <p class="milli">When sketching out ideas for the logo I wanted to adding an icon into the word SOLINK so that it wouldn't add unnecessary length to the logo. Along with that it could stand alone as an alternative logo. The original logo had two links forming the <i>S</i> to represent <i>LINK</i> in the company name. Without being so literal I came up with the idea to use the <i>O</i> in the name to link three dots together.<br> The three dots are very representative of the company since they talk in threes a lot.</p>
-        <ul class="list milli">
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <p class="">When sketching out ideas for the logo I wanted to adding an icon into the word SOLINK so that it wouldn't add unnecessary length to the logo. Along with that it could stand alone as an alternative logo. The original logo had two links forming the <i>S</i> to represent <i>LINK</i> in the company name. Without being so literal I came up with the idea to use the <i>O</i> in the name to link three dots together.</p>
+        <p>The three dots are very representative of the company since they talk in threes a lot.</p>
+        <ul class="list">
           <li>Video - pos - data</li>
           <li>View - find - share</li>
           <li>Motion - transaction - action</li>
