--- a/vans.html
+++ b/vans.html
@@ -11,8 +11,8 @@ layout: default
       </div>
 
       <div class="unit multi s-1 m-1-2 island">
-        <p class="milli">My whole life I've always loved the brand Vans because of how the shoes feel and how unique all the styles look. Year after year they come out with new styles that appeal to men, women and youth. Since Vans is known as a skater store, it's brand has more of a tom-boy look, I wanted to create something different to advertise the brand.</p>
-        <p class="milli">I tried to create a brand that was a bit more feminine to advertise styles for women and girls. One of my favourite art styles is art deco because of how elegant it is, using geometric motifs, sharply defined outlines and bold colours. Flappers were iconic in the 1920s-30s and were subjects in a lot of art and images of the day. I incorporated women in these pieces to emulate the flapper feel but kept them modern without the feathers and jewelry.</p>
+        <p class="">My whole life I've always loved the brand Vans because of how the shoes feel and how unique all the styles look. Year after year they come out with new styles that appeal to men, women and youth. Since Vans is known as a skater store, it's brand has more of a tom-boy look, I wanted to create something different to advertise the brand.</p>
+        <p class="">I tried to create a brand that was a bit more feminine to advertise styles for women and girls. One of my favourite art styles is art deco because of how elegant it is, using geometric motifs, sharply defined outlines and bold colours. Flappers were iconic in the 1920s-30s and were subjects in a lot of art and images of the day. I incorporated women in these pieces to emulate the flapper feel but kept them modern without the feathers and jewelry.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 island">
